day-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: giropops
  name: bora-3
spec:
  selector:
    app: nginx-strigus
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
