day-1/vs-giropops.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-giropops
  namespace: giropops
spec:
  hosts:
    - "*"
  gateways:
    - giropops
  http:
  - name: nginx-giropops
    match:
    - uri:
        prefix: /giropops
    rewrite:
      uri: "/"
    route:
    - destination:
        host: nginx-giropops
        port:
          number: 80
      weight: 80
    - destination:
        host: nginx-giropops-v2
        port:
          number: 80
      weight: 20
  - name: nginx-strigus
    match:
    - uri:
        prefix: /strigus
    rewrite:
      uri: "/"
    route:
    - destination:
        host: nginx-strigus
        port:
          number: 80
